[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Dialogs/TeamCreationDialog.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/ScalingSize.gd" type="Script" id=2]

[node name="TeamCreationDialog" type="ConfirmationDialog" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 433.0
margin_top = 130.0
margin_right = 648.0
margin_bottom = 272.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true
window_title = "Create a New Team"
resizable = false
dialog_hide_on_ok = false
script = ExtResource( 1 )
_sections_unfolded = [ "Dialog", "Rect" ]

[node name="VBoxContainer" type="VBoxContainer" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 10
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="WarningText" type="RichTextLabel" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 199.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_colors/default_color = Color( 1, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
script = ExtResource( 2 )
_sections_unfolded = [ "BBCode", "Rect", "custom_colors" ]
resize_rate = 300.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 10.0
margin_right = 199.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/vseparation = 10
columns = 2
_sections_unfolded = [ "custom_constants" ]

[node name="NameLabel" type="Label" parent="VBoxContainer/GridContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 45.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Name:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NameValue" type="LineEdit" parent="VBoxContainer/GridContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 49.0
margin_right = 199.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 1
max_length = 20
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Enter the team name."
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder", "Rect", "Size Flags" ]

[node name="ColourLabel" type="Label" parent="VBoxContainer/GridContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 37.0
margin_right = 45.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Colour:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ColourValue" type="ColorPickerButton" parent="VBoxContainer/GridContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 49.0
margin_top = 34.0
margin_right = 199.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="IsDriver" type="CheckBox" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 39.0
margin_top = 74.0
margin_right = 159.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 1
toggle_mode = true
pressed = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start As Driver"
flat = false
align = 0
_sections_unfolded = [ "Size Flags" ]

[connection signal="about_to_show" from="." to="." method="_on_TeamCreationDialog_about_to_show"]


